--- a/content/post/2022-06-25-digging-into-njoag-law-enforcement-officer-diversity-data-part-i/index.Rmd
+++ b/content/post/2022-06-25-digging-into-njoag-law-enforcement-officer-diversity-data-part-i/index.Rmd
@@ -14,6 +14,11 @@ tags:
 knitr::opts_chunk$set(echo = TRUE)
 options(kableExtra.html.bsTable = TRUE)
 options(digits=2)
+renv::use(
+  "tor-gu/njoagleod@v1.1.3",
+  "tidyverse@1.3.1",
+  "sf@1.0-7"
+)
 ```
 
 ## NJOAG Use of Force and Law Enforcement Officer Diversity data sets
