1) Adding page for njmunicipalities-api 2) Updating projects page.

--- a/content/projects.Rmd
+++ b/content/projects.Rmd
@@ -37,8 +37,17 @@ This data package is a cleaned-up version of the NJ OAG Law Enforcement Officer 
 
 This is a data package for R containing the results of statewide elections in NJ, from 2004 to 2021.
 
-#### NJ Municipaliites Data Package for R
+#### NJ Municipalities Data Package for R
 
 [NJMUNICIPALITIES](https://github.com/tor-gu/njmunicipalities#readme)
 
 This is a data package for R that contains every county and municipality in New Jersey, from 2000 to 2022.
+
+## APIs
+
+#### NJ Municipalities API
+
+[NJMUNICIPALITIES-API](/apis/njmunicipalities.html)
+
+This is an API that exposes the data in the [NJMUNICIPALITIES data package for R](#nj-municipalities-data-package-for-r). The source code is [here](https://github.com/tor-gu/njmunicipalities-api)
+
